--- a/public/buyers.html
+++ b/public/buyers.html
@@ -31,7 +31,7 @@
           <span class="icon-bar"></span>
         </button>
         <a href="index.html" class="navbar-brand">
-          Hacklist.io
+          Hacklist
         </a>
       </div>
 
@@ -52,12 +52,13 @@
                 <li style="border-right: 1px rgba(255,255,255,0.14) solid;">
                     <a href="contact.html">Contact</a>
                 </li>
-                
-                <li class="sign-btn" style="margin-left:315px;">
-                    <a href="signin.html">Sign In</a>
+
+                <li class="sign-btn" style="margin-left:315px;color:rgb(38, 48, 57);background-color:rgb(38, 48, 57)">
+                    <a style="color:rgb(38, 48, 57)" href="signin.html">Sign In</a>
                 </li>
                 <li class="sign-btn" style="margin-left:5px;">
-                    <a href="signup.html">Sign Up</a>
+                    <a href="mailto:hacklist.io@gmail.com">Sign Up</a>
+
                 </li>
             </ul>
         </nav>
@@ -145,23 +146,38 @@ border-radius: 3px;"><img class="pic img-responsive" src="https://pbs.twimg.com/
               <p class="box-1"><b>Framework:</b> <span class="mini-button">Javascript</span></p>
             </div>
           </div>
-           <div class="col-sm-4 col-md-4 col-lg-4">
-            <div class="photo">
-              <div class="pic">
-                <a href="#">
-                  <center style="background-color: #000;
-border-radius: 3px;"><img class="pic img-responsive" src="https://pbs.twimg.com/profile_images/431589071660384256/OI91J7E9.jpeg" height="150px!important" style="height:200px" alt=""></center>
-                  <img class="see_more" src="http://imgur.com/MB0rAtE.png" />
-                </a>
-              </div>
-              <h3><a href="#">Eugene Joseph</a></h3>
-              <p class="box-1"><b>Bio:</b> Front-End Developer</p>
-              <p class="box-1"><b>Industries:</b> <span class="mini-button">Education</span></p>
-              <p class="box-1"><b>Price:</b><span class="mini-button">$100</span></p>
-              <p class="box-1"><b>Framework:</b> <span class="mini-button">Javascript</span></p>
+            <div class="col-sm-4 col-md-4 col-lg-4">
+                <div class="photo">
+                    <div class="pic">
+                        <a href="#">
+                            <center style="background-color: #000;
+border-radius: 3px;"><img class="pic img-responsive" src="http://hackimages.blob.core.windows.net/images/aaron.jpg" height="150px!important" style="height:200px" alt=""></center>
+                            <img class="see_more" src="http://imgur.com/MB0rAtE.png">
+                        </a>
+                    </div>
+                    <h3><a href="">Aaron Landy</a></h3>
+                    <p class="box-1"><b>Bio:</b> Developer Prodigy </p>
+                    <p class="box-1"><b>Industries:</b> <span class="mini-button">Education</span></p>
+                    <p class="box-1"><b>Price:</b><span class="mini-button">$1000</span></p>
+                    <p class="box-1"><b>Framework:</b> <span class="mini-button">Javascript, Python</span></p>
+                </div>
             </div>
-          </div>
-      
+            <div class="col-sm-4 col-md-4 col-lg-4">
+                <div class="photo">
+                    <div class="pic">
+                        <a href="#">
+                            <center style="background-color: #000;
+border-radius: 3px;"><img class="pic img-responsive" src="http://i.imgur.com/iAE7o2j.jpg?2" height="150px!important" style="height:200px" alt=""></center>
+                            <img class="see_more" src="http://imgur.com/MB0rAtE.png">
+                        </a>
+                    </div>
+                    <h3><a href="">Kevin Miller</a></h3>
+                    <p class="box-1"><b>Bio:</b> Node.JS Developer</p>
+                    <p class="box-1"><b>Industries:</b> <span class="mini-button">Social, Education</span></p>
+                    <p class="box-1"><b>Price:</b><span class="mini-button">$5000</span></p>
+                    <p class="box-1"><b>Framework:</b> <span class="mini-button">Javascript,</span></p>
+                </div>
+            </div>
       </div>
     </div>
 
