--- a/public/projects.html
+++ b/public/projects.html
@@ -30,8 +30,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="index.html" class="navbar-brand">
-          Hacklist.io
+          <a href="index.html" class="navbar-brand">
+            Hacklist
         </a>
       </div>
 
@@ -52,12 +52,12 @@
                 <li style="border-right: 1px rgba(255,255,255,0.14) solid;">
                     <a href="contact.html">Contact</a>
                 </li>
-                
-                <li class="sign-btn" style="margin-left:315px;">
-                    <a href="signin.html">Sign In</a>
+
+                <li class="sign-btn" style="margin-left:315px;color:rgb(38, 48, 57);background-color:rgb(38, 48, 57)">
+                    <a style="color:rgb(38, 48, 57)" href="signin.html">Sign In</a>
                 </li>
                 <li class="sign-btn" style="margin-left:5px;">
-                    <a href="signup.html">Sign Up</a>
+                    <a href="mailto:hacklist.io@gmail.com">Sign Up</a>
                 </li>
             </ul>
         </nav>
