--- a/public/about.html
+++ b/public/about.html
@@ -31,7 +31,7 @@
           <span class="icon-bar"></span>
         </button>
         <a href="index.html" class="navbar-brand">
-          Hacklist.io
+          Hacklist
         </a>
       </div>
 
@@ -53,11 +53,11 @@
                     <a href="contact.html">Contact</a>
                 </li>
                 
-                <li class="sign-btn" style="margin-left:315px;">
-                    <a href="signin.html">Sign In</a>
+                <li class="sign-btn" style="margin-left:315px;color:rgb(38, 48, 57);background-color:rgb(38, 48, 57)">
+                    <a style="color:rgb(38, 48, 57)" href="signin.html">Sign In</a>
                 </li>
                 <li class="sign-btn" style="margin-left:5px;">
-                    <a href="signup.html">Sign Up</a>
+                    <a href="mailto:hacklist.io@gmail.com">Sign Up</a>
                 </li>
             </ul>
         </nav>
