--- a/public/faq.html
+++ b/public/faq.html
@@ -31,7 +31,7 @@
           <span class="icon-bar"></span>
         </button>
         <a href="index.html" class="navbar-brand">
-          Hacklist.io
+          Hacklist
         </a>
       </div>
 
@@ -52,12 +52,12 @@
                 <li style="border-right: 1px rgba(255,255,255,0.14) solid;">
                     <a href="contact.html">Contact</a>
                 </li>
-                
-                <li class="sign-btn" style="margin-left:315px;">
-                    <a href="signin.html">Sign In</a>
+
+                <li class="sign-btn" style="margin-left:315px;color:rgb(38, 48, 57);background-color:rgb(38, 48, 57)">
+                    <a style="color:rgb(38, 48, 57)" href="signin.html">Sign In</a>
                 </li>
                 <li class="sign-btn" style="margin-left:5px;">
-                    <a href="signup.html">Sign Up</a>
+                    <a href="mailto:hacklist.io@gmail.com">Sign Up</a>
                 </li>
             </ul>
         </nav>
@@ -81,13 +81,13 @@ border-radius:3px;">
                             <div class="panel-heading">
                               <h4 class="panel-title">
                                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                                  There are many variatons of passages from Lorem Ipsum available?
+                                  1) What is Hacklist.io?
                                 </a>
                               </h4>
                             </div>
                             <div id="collapseOne" class="panel-collapse collapse in">
                               <div class="panel-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                Hacklist.io is a marketplace for people to sell their project ideas to the right buyer. Whether you have a basic web platform or a fully function mobile app, Hacklist.io will help you to get acquired or to make an acquisition. 
                               </div>
                             </div>
                           </div>
@@ -95,13 +95,13 @@ border-radius:3px;">
                             <div class="panel-heading">
                               <h4 class="panel-title">
                                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                                  Majority have suffered alteration in some form injected humour these randomised?
+                                   2) What if all we have is a piece of code but nothing functional?
                                 </a>
                               </h4>
                             </div>
                             <div id="collapseTwo" class="panel-collapse collapse">
                               <div class="panel-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic 
+                                That’s completely cool :) There’s always value in anything that you build. 
                               </div>
                             </div>
                           </div>
@@ -109,13 +109,13 @@ border-radius:3px;">
                             <div class="panel-heading">
                               <h4 class="panel-title">
                                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                                 Injected humour these randomised words which don't look even slightly believable?
+                                 3) How do you mix and match buyers & sellers?
                                 </a>
                               </h4>
                             </div>
                             <div id="collapseThree" class="panel-collapse collapse">
                               <div class="panel-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                We mix and match buyers and sellers with similar interests, selling/buying price ranges, similar APIs/frameworks used, etc. You can feel free to express interest in a buyer or seller and we’ll make the exchange happen! You’ll also have the option to view all projects and buyers and to ping each other; however, we control the exchange and we’ll identify if it makes sense to make an introduction :) 
                               </div>
                             </div>
                           </div>
@@ -123,13 +123,13 @@ border-radius:3px;">
                             <div class="panel-heading">
                               <h4 class="panel-title">
                                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
-                                 It has survived not only five centuries, but also the leap into electronic typesetting?
+                                4) How do we receive/send money when we sell/buy a project?
                                 </a>
                               </h4>
                             </div>
                             <div id="collapseFour" class="panel-collapse collapse">
                               <div class="panel-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squidoident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                As soon as a transaction is placed on our site, we’ll send the money to your bank account within 3-5 business days.
                               </div>
                             </div>
                           </div>
