--- a/public/faq.html
+++ b/public/faq.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
   <![endif]-->
 <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic|Ubuntu:300,400,500,700,300italic,400italic,500italic|Open+Sans:300italic,400,300,600,700|Montserrat:400,300,500,700,900|Roboto:400,700' rel='stylesheet' type='text/css'></head>
-<body>
+<body style="background-image:url(images/lightblue.png)">
      <header class="navbar navbar-inverse navbar-fixed-top" role="banner">
     <div class="container" >
       <div class="navbar-header">
