--- a/public/index.html
+++ b/public/index.html
@@ -39,16 +39,16 @@
       <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="about.html">About</a>
+                    <a href="#">About</a>
                 </li>
                 <li>
-                    <a href="projects.html">Projects</a>
+                    <a href="#">Projects</a>
                 </li>
                 <li>
-                    <a href="buyers.html">Buyers</a>
+                    <a href="#">Buyers</a>
                 </li>
                 <li>
-                    <a href="faq.html">FAQ</a>
+                    <a href="#">FAQ</a>
                 </li>
                 <li style="border-right: 1px rgba(255,255,255,0.14) solid;">
                     <a href="contact.html">Contact</a>
@@ -108,8 +108,8 @@ border-radius:3px;">
               <p class="box-1"><b>Price Range:</b> <span class="mini-button">$1,000 - $2,000</span></p>
             </div>
           </div>
-          <div class="col-sm-4 col-md-4 col-lg-4"> <div class="photo"> <div class="pic"> <a href="#"> <center><img class="pic img-responsive" src="http://hackimages.blob.core.windows.net/images/prodee.png" height="150px!important" style="height:200px;border-radius: 3px;" alt=""></center> <img id="Prodee" class="see_more" src="http://imgur.com/MB0rAtE.png"> </a> </div> <h3><a href="#">Prodee</a></h3> <p class="box-1"><b>Description:</b>Forum for sharing product ideas and insights</p> <p class="box-1"><b>Industry:</b> <span class="mini-button">Social</span></p><p class="box-1"><b>APIs:</b><span class="mini-button">Parse</span></p><p class="box-1"><b>Framework:</b></p><p class="box-1"><b>Price Range:</b> <span class="mini-button">Inquire with Seller</span></p> </div> </div>
-          <div class="col-sm-4 col-md-4 col-lg-4"> <div class="photo"> <div class="pic"> <a href="#"> <center><img class="pic img-responsive" src="http://hackimages.blob.core.windows.net/images/voiceup.png" height="150px!important" style="height:200px;border-radius: 3px;" alt=""></center> <img id="Voiceup" class="see_more" src="http://imgur.com/MB0rAtE.png"> </a> </div> <h3><a href="#">Voiceup</a></h3> <p class="box-1"><b>Description:</b>Secret for Enterprise 2.0</p> <p class="box-1"><b>Industry:</b> <span class="mini-button">Enterprise</span></p><p class="box-1"><b>APIs:</b><span class="mini-button">Yammer</span></p><p class="box-1"><b>Framework:</b></p><p class="box-1"><b>Price Range:</b> <span class="mini-button">Inquire with Seller</span></p> </div> </div>
+          <div class="col-sm-4 col-md-4 col-lg-4"> <div class="photo"> <div class="pic"> <a href="#"> <center><img class="pic img-responsive" src="http://hackimages.blob.core.windows.net/images/prodee.png" height="150px!important" style="height:200px;border-radius: 3px;" alt=""></center> <img id="Prodee" class="see_more" src="http://imgur.com/MB0rAtE.png"> </a> </div> <h3><a href="#">Prodee</a></h3> <p class="box-1"><b>Description:</b>Forum for sharing product ideas and insights</p> <p class="box-1"><b>Industry:</b> <span class="mini-button">Social</span></p><p class="box-1"><b>APIs:</b><span class="mini-button">Parse</span></p><p class="box-1"><b>Framework:</b><span class="mini-button">Angular</span></p><p class="box-1"><b>Price Range:</b> <span class="mini-button">Inquire with Seller</span></p> </div> </div>
+          <div class="col-sm-4 col-md-4 col-lg-4"> <div class="photo"> <div class="pic"> <a href="#"> <center><img class="pic img-responsive" src="http://hackimages.blob.core.windows.net/images/voiceup.png" height="150px!important" style="height:200px;border-radius: 3px;" alt=""></center> <img id="Voiceup" class="see_more" src="http://imgur.com/MB0rAtE.png"> </a> </div> <h3><a href="#">Voiceup</a></h3> <p class="box-1"><b>Description:</b>Secret for Enterprise 2.0</p> <p class="box-1"><b>Industry:</b> <span class="mini-button">Enterprise</span></p><p class="box-1"><b>APIs:</b><span class="mini-button">Yammer</span></p><p class="box-1"><b>Framework:</b><span class="mini-button">Other</span></p><p class="box-1"><b>Price Range:</b> <span class="mini-button">Inquire with Seller</span></p> </div> </div>
 
          
         </div>
@@ -207,6 +207,7 @@ border-radius:3px;">
 border-radius:3px;">
         <header>
         	<h1>Think of other ways you can use our product?</h1>
+            <h4>ran into some bugs, but the full site will be back up soon!</h4>
         	<h1><a href="#" class="btn btn-green" style="display: inline-block;
 margin-bottom: 0;
 border-radius: 2px;
@@ -249,6 +250,7 @@ box-shadow: 0 1px 2px 0 rgba(0,0,0,0.18),inset 0 0 1px 1px rgba(255,255,255,0.09
                         <a class="email" href="mailto:hacklist.io@gmail.com"><i class="icon-envelope"></i></a>
                     </div>
               </div>
+
           </div>
         </div>
     </footer>
